--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "build": "webpack",
     "package": "garoon-plugin-packer . --out dist/plugin.zip",
     "upload": ". ./.env && garoon-plugin-uploader --base-url $GAROON_BASE_URL --username $GAROON_USERNAME --password $GAROON_PASSWORD --plugin-path $GAROON_PLUGINPATH --plugin-id $GAROON_PLUGINID",
-    "dev": "run-s tcheck build package",
+    "dev": "run-s tcheck build package upload",
+    "dev:w": "npm-watch dev",
     "lint": "eslint --ext .ts,.tsx src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
+  },
+  "watch": {
+    "dev": {
+      "patterns": [
+        "src",
+        "./manifest.json"
+      ],
+      "extensions": "html,tsx,ts,css,js,jsx,png,gif,svg,json"
+    }
   },
   "repository": {
     "type": "git",
@@ -29,6 +39,7 @@
     "@types/react-dom": "^18.2.17",
     "eslint": "^8.55.0",
     "npm-run-all": "^4.1.5",
+    "npm-watch": "^0.11.0",
     "prettier": "^3.1.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
@@ -36,6 +47,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
